<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_user_type"
        android:layout_width="0dp"
        android:layout_height="230dp"
        android:background="@color/MainColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/welcome_txt"
            android:textColor="@color/white_color"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/user_type_txt"
            android:textColor="@color/dark_white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_welcome"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

        <LinearLayout
            android:id="@+id/layout_select_user_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/layout_rounded"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_select">

            <Button
                android:id="@+id/btn_qa3a"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_rounded"
                android:onClick="onUserSelectType"
                android:text="قاعة"
                android:textColor="@color/white_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_shop"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_rounded"
                android:onClick="onUserSelectType"
                android:text="متجر"
                android:textColor="@color/white_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_customer"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_rounded"
                android:onClick="onUserSelectType"
                android:text="زبون"
                android:textColor="@color/white_color"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_user_number"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:src="@drawable/call_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/et_user_number"
        app:layout_constraintTop_toBottomOf="@+id/layout_user_type" />

    <EditText
        android:id="@+id/et_user_number"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:hint="@string/user_phone_num_hint"
        android:textColorHint="#000000"
        android:inputType="phone"
        app:layout_constraintEnd_toStartOf="@+id/iv_user_number"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_user_type" />
    <ImageView
        android:id="@+id/iv_user_password"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:src="@drawable/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/et_user_password"
        app:layout_constraintTop_toBottomOf="@+id/iv_user_number" />

    <EditText
        android:id="@+id/et_user_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:gravity="right"
        android:hint="@string/user_password_hint"
        android:textColorHint="#000000"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/iv_user_number"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_number"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/button_rounded"
        android:text="تسجيل الدخول "
        android:textColor="@color/white_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_password" />

<TextView
    android:id="@+id/tv_new"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/create_account_txt"
    android:textSize="18sp"
    android:textColor="@color/dark_gray"
    app:layout_constraintStart_toEndOf="@+id/tv_forget"
    app:layout_constraintEnd_toEndOf="@+id/btn_login"
    app:layout_constraintTop_toBottomOf="@+id/btn_login"/>
    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="نسيت كلمة السر "
        android:textSize="18sp"
        android:textColor="@color/dark_gray"
        app:layout_constraintEnd_toStartOf="@id/tv_new"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"/>

</androidx.constraintlayout.widget.ConstraintLayout>